Add labels to social links

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,13 +2,13 @@
   <div class="container">
     <div class="footer__social-links col col--2-3">
       <h2 class="footer__heading">Say hello!</h2>
-      <p class="footer__social-link">
+      <p class="footer__social-link">Github:
         <a href="https://github.com/taravancil">@taravancil</a>
       </p>
-      <p class="footer__social-link">
+      <p class="footer__social-link">Twitter:
         <a href="https://twitter.com/tbvancil">@tbvancil</a>
       </p>
-      <p class="footer__social-link">
+      <p class="footer__social-link">Instagram: 
         <a href="https://instagram.com/taravancil">@taravancil</a>
       </p>
     </div>
