Add container to header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,5 @@
 <header class="header">
-  {{ partial "navigation.html" . }}
+  <div class="container">
+    {{ partial "navigation.html" . }}
+  </div>
 </header>
