--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,5 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Site.Title }}</title>
   <link rel="canonical" href="{{ .Permalink }}">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/css/style.min.css">
 </head>
