Add basic navigation styles

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,4 +1,4 @@
-<nav role="navigation">
+<nav role="navigation" class="nav">
   <ul>
     <li><a href="https://taravancil.github.io/blog">blog</a></li>
     <li><a href="https://taravancil.github.io/about">about</a></li>
