Add class to navigation list items

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,6 +1,10 @@
 <nav role="navigation" class="nav">
   <ul>
-    <li><a href="https://taravancil.github.io/blog">blog</a></li>
-    <li><a href="https://taravancil.github.io/about">about</a></li>
+    <li class="nav__item">
+      <a href="https://taravancil.github.io/blog">blog</a>
+    </li>
+    <li class="nav__item">
+      <a href="https://taravancil.github.io/about">about</a>
+    </li>
   </ul>
 </nav>
