Add blog post component

--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,3 +1,4 @@
 // Components are standalone items, and styles in this directory should only
 // style the component, its modifiers, and perhaps its children.
 
+@import 'post';
