Use flexbox to handle header layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 
   <body>
     <header class="header--home">
-      <div class="container grid">
+      <div class="container">
         <div class="intro">
           <h1 class="intro__heading">Hi. I'm Tara Vancil.</h1>
           <p class="intro__blurb">
