--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,6 +1,8 @@
 $breakpoints: (
   'show-cols-2': (min-width: 700px),
   'show-cols-3': (min-width: 800px),
+  'contain-90': (min-width: 600px),
+  'contain-70': (min-width: 800px),
   'expand-header-home': (min-width: 500px),
 );
 
