Add link to home page

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,6 +1,9 @@
 <nav role="navigation" class="nav">
   <ul>
     <li class="nav__item">
+      <a href="https://taravancil.github.io">home</a>
+    </li>
+    <li class="nav__item">
       <a href="https://taravancil.github.io/blog">blog</a>
     </li>
     <li class="nav__item">
