--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,7 +5,25 @@
   margin-top: 4em;
   padding: 1em 0;
 
+  .container {
+    @extend %flex-container;
+  }
+
   &__heading {
     color: $color-text--footer;
+  }
+
+  &__nav {
+    display: inline-block;
+  }
+
+  @include respond-to(expand-footer) {
+    &__nav {
+      flex-basis: 33.3%;
+    }
+
+    &__social-links {
+      flex-basis: 66.6%;
+    }
   }
 }
