Add basic styles for post metadata and read more

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -4,4 +4,17 @@
     @extend %link;
     text-decoration: underline;
   }
+
+  &__date {
+    color: $color-primary;
+  }
+
+  &__title {
+    @extend %transition;
+    transition-property: color;
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
 }
