--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -11,8 +11,6 @@ body {
   color: $color-text;
 }
 
-h1, h2, h3, h4, h5, h5, h6 {
+h1, h2, h3, h4, h5, h5 {
   @extend %accent-font;
-  color: $color-text--accent;
 }
-
