Add mixin for margin

--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -8,4 +8,8 @@
   @else {
     @warn "`#{$name}` does not exist in ``$breakpoints`."
   }
-}
+};
+
+@mixin margin($top, $right: top, $bottom: $top, $left: $top) {
+  margin: $top, $right, $bottom, $left;
+};
