--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,20 +1,15 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer__social-links col col--2-3">
-      <h2 class="footer__heading">Say hello!</h2>
-      <p class="footer__social-link">Github:
-        <a href="https://github.com/taravancil">@taravancil</a>
-      </p>
-      <p class="footer__social-link">Twitter:
-        <a href="https://twitter.com/tbvancil">@tbvancil</a>
-      </p>
-      <p class="footer__social-link">Instagram: 
-        <a href="https://instagram.com/taravancil">@taravancil</a>
-      </p>
-    </div>
-
-    <div class="footer__nav col col--1-3">
-      {{ partial "navigation.html" . }}
+    <div class="footer__social-links">
+      <a href="https://github.com/taravancil" class="footer__social-link">
+        github
+      </a>
+      <a href="https://twitter.com/tbvancil" class="footer__social-link">
+        twitter
+      </a>
+      <a href="https://instagram.com/taravancil" class="footer__social-link">
+        instagram
+      </a>
     </div>
   </div>
 </footer>
