--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,29 +1,18 @@
 .footer {
-  background: $color-bg--footer;
+  @extend %accent-font;
+  padding: 1.5em 0;
   width: 100%;
-  min-height: 150px;
-  margin-top: 4em;
-  padding: 1em 0;
+  margin-top: 2em;
 
-  .container {
-    @extend %flex-container;
-  }
-
-  &__heading {
-    color: $color-text--footer;
-  }
-
-  &__nav {
+  &__social-links {
     display: inline-block;
+    font-size: .9em;
   }
 
-  @include respond-to(expand-footer) {
-    &__nav {
-      flex-basis: 33.3%;
-    }
-
-    &__social-links {
-      flex-basis: 66.6%;
-    }
+  &__social-link {
+    @extend %link;
+    color: $color-primary;
+    display: inline-block;
+    margin-right: 1.5em;
   }
 }
