Add containing div around post content

--- a/layouts/blog/summary.html
+++ b/layouts/blog/summary.html
@@ -1,11 +1,13 @@
-<div class="post--summary">
+<div class="post post--summary">
   <h2 class="post__title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
   <div class="post__meta">
     <span class="post__date">{{ .Date.Format "2006-01-02" }}</span>
     <div class="post__tags"></div>
   </div>
 
-  {{ .Summary }}
+  <div class="post__content">
+    {{ .Summary }}
+  </div>
 
-  <a href="{{ .Permalink }}">&gt&gt Read more</a>
+  <a href="{{ .Permalink }}" class="post__more">&gt&gt Read more</a>
 </div>
