--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,10 @@
 
     <div class="container">
       <h1>{{ .Title }}</h1>
-      {{ .Content }}
+
+      <div class="post__content">
+        {{ .Content }}
+      </div>
     </div>
 
     {{ partial "footer.html" .}}
