--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,13 +1,13 @@
 <nav role="navigation" class="nav">
-  <ul>
+  <ul class="nav__items">
     <li class="nav__item">
       <a href="https://taravancil.github.io/">home</a>
     </li>
     <li class="nav__item">
-      <a href="https://taravancil.github.io/blog/">blog</a>
+      <a href="https://taravancil.github.io/about/">about</a>
     </li>
     <li class="nav__item nav__item--last">
-      <a href="https://taravancil.github.io/about/">about</a>
+      <a href="https://taravancil.github.io/blog/">blog</a>
     </li>
   </ul>
 </nav>
