--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,26 +3,22 @@
   {{ partial "head.html" . }}
 
   <body>
-    <header class="header header--home">
-      <div class="container">
-        <div class="intro">
-          <h1 class="intro__heading">Hi. I'm Tara.</h1>
-          <div class="intro__blurb">
-            <p>
-              I'm a software developer with an interest in security, privacy, and cryptography.
-            </p>
-            <p>
-              This is my personal blog where I write about boring personal and sometimes technical stuff. You can also find me on <a href="https://github.com/taravancil">Github</a> and <a href="https://twitter.com/tbvancil">Twitter</a>.
-            </p>
-          </div>
+    {{ partial "header.html" . }}
+
+    <div class="container">
+      <div class="intro">
+        <h1 class="intro__heading">Hi. I'm Tara.</h1>
+        <div class="intro__blurb">
+          <p>
+            I'm a software developer with an interest in security, privacy, and cryptography.
+          </p>
+          <p>
+            This is my personal blog where I write about boring personal and sometimes technical stuff. You can also find me on <a href="https://github.com/taravancil">Github</a> and <a href="https://twitter.com/tbvancil">Twitter</a>.
+          </p>
         </div>
-
-        {{ partial "navigation.html" . }}
       </div>
-    </header>
 
-    <div class="recent">
-      <div class="container">
+      <div class="recent">
         {{ range first 10 .Data.Pages }}
           {{ .Render "li" }}
         {{ end }}
