Add border to header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,24 +3,7 @@
   margin-bottom: 2em;
   padding: 1em 0;
 
-  &--home .container {
-    @extend %flex-container;
-    flex-direction: column;
-    text-align: center;
-    border-bottom: 2px solid $black;
-
-    @include respond-to(expand-header-home) {
-      flex-direction: row;
-
-      .intro {
-        flex-basis: 66.6%;
-        text-align: left;
-        margin-right: 1em;
-      }
-
-      .nav {
-        flex-basis: 33.3%;
-      }
-    }
+  .container {
+    border-bottom: 1px solid;
   }
 }
