--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -19,3 +19,19 @@ pre code {
   border: none;
   background: none;
 }
+
+dl {
+  @extend %module;
+}
+
+dt {
+  font-weight: bold;
+
+  &:after {
+    content: ':';
+  }
+}
+
+dd {
+  margin-bottom: 1em;
+}
