--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -2,22 +2,28 @@ body {
   background: $color-bg;
 }
 
-pre {
-  border: 1px solid mix($color-secondary, $white, 20%);
+pre, code {
+  border: 1px solid;
   border-radius: 1px;
+}
+
+pre, {
+  border-color: mix($color-secondary, $white, 20%);
   background: mix($color-secondary, $white, 5%);
   padding: .5em;
 }
 
 code {
-  border: none;
-  background: mix($color-secondary, $white, 17%);
+  border-color: mix($color-primary, $white, 15%);
+  background: mix($color-primary, $white, 3%);
+  color: mix($color-primary, $white, 95%);
   padding: .1em .4em;
 }
 
 pre code {
   border: none;
   background: none;
+  color: inherit;
 }
 
 dl {
