Use relative URLs and canonify when building site

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,13 +1,13 @@
 <nav role="navigation" class="nav">
   <ul class="nav__items">
     <li class="nav__item">
-      <a href="https://taravancil.github.io/">home</a>
+      <a href="/">home</a>
     </li>
     <li class="nav__item">
-      <a href="https://taravancil.github.io/about/">about</a>
+      <a href="/about/">about</a>
     </li>
     <li class="nav__item nav__item--last">
-      <a href="https://taravancil.github.io/blog/">blog</a>
+      <a href="/blog/">blog</a>
     </li>
   </ul>
 </nav>
