--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,28 +1,13 @@
 .grid {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.col {
-  width: 100%;
-  float: left;
-}
-
-.col-1-2 {
-  @include respond-to(show-cols-2) {
-    width: 50%;
-  }
+  @extend %flex-container;
+  flex-wrap: wrap;
 }
 
 .col-1-3 {
-  @include respond-to(show-cols-3) {
-    width: 33.3%;
-  }
+  flex-basis: 33.3%;
 }
 
 .col-2-3 {
-  @include respond-to(show-cols-3) {
-    width: 66.6%;
-  }
+  flex-basis: 66.6%;
+  min-width: 600px;
 }
