--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Site.Title }}</title>
-  <link rel="canonical" href="{{ .Permalink }}">
-  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="canonical" href="{{ .Permalink }}" />
+  <link href="https://fonts.googleapis.com/css?family=Heebo:400" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.min.css" />
 </head>
