--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html>
   {{ partial "head.html" . }}
-
   <body>
-    {{ partial "header.html" . }}
-
     <div class="container">
-      <h1>{{ .Title }}</h1>
-    </div>
+      {{ partial "header.html" . }}
+      <main>
+        <div class="main__content">
+          <h1>{{ .Title }}</h1>
 
-    {{ partial "footer.html" .}}
+          {{ range .Data.Pages.GroupByDate "2006" }}
+            <h2 class="blog__year">{{ .Key }}</h2>
+            <ul class="posts-list">
+              {{ range .Pages }}
+                {{ .Render "li" }}
+              {{ end }}
+            </ul>
+          {{ end }}
+        </div>
+        {{ partial "sidebar.html" . }}
+      </main>
+    </div>
   </body>
 </html>
