--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,20 +1,18 @@
 <!doctype html>
 <html>
   {{ partial "head.html" . }}
-
   <body>
-    {{ partial "header.html" . }}
-
     <div class="container">
-      <article>
-        <h1>{{ .Title }}</h1>
-
-        <div class="post__content">
-          {{ .Content }}
-        </div>
-      </article>
+      {{ partial "header.html" . }}
+      <main>
+        <article class="main__content post">
+          <h1>{{ .Title }}</h1>
+          <div class="post__content">
+            {{ .Content }}
+          </div>
+        </article>
+        {{ partial "sidebar.html" . }}
+      </main>
     </div>
-
-    {{ partial "footer.html" .}}
   </body>
 </html>
