--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,17 +2,17 @@
 <html>
   {{ partial "head.html" . }}
   <body>
-    <div class="container">
-      {{ partial "header.html" . }}
-      <main>
+    {{ partial "header.html" . }}
+    <main class="main">
+      <div class="container">
         <article class="main__content post">
           <h1>{{ .Title }}</h1>
           <div class="post__content">
             {{ .Content }}
           </div>
         </article>
-        {{ partial "sidebar.html" . }}
-      </main>
-    </div>
+      </div>
+    </main>
+    {{ partial "footer.html" . }}
   </body>
 </html>
