--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,9 +2,9 @@
 <html>
   {{ partial "head.html" . }}
   <body>
-    <div class="container">
-      {{ partial "header.html" . }}
-      <main>
+    {{ partial "header.html" . }}
+    <main class="main">
+      <div class="container">
         <article class="main__content post">
           <h1>Page Not Found </h1>
           <div class="post__content">
@@ -13,8 +13,8 @@
             </p>
           </div>
         </article>
-        {{ partial "sidebar.html" . }}
-      </main>
-    </div>
+      </div>
+    </main>
+    {{ partial "footer.html" . }}
   </body>
 </html>
