Put tags in an aside element

--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,7 +1,9 @@
-<ul class="tags">
+<aside class="tags">
+  <ul>
   {{ range .Params.tags }}
     <li class="tag">
       <a href="/tags/{{ . | urlize }}">#{{ . }}</a>
     </li>
   {{ end }}
-</ul>
+  </ul>
+</aside>
