--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Site.Title }}</title>
   <link rel="canonical" href="{{ .Permalink }}" />
-  <link href="https://fonts.googleapis.com/css?family=Heebo:400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.min.css" />
 </head>
