--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ .Site.Title }}</title>
+  <title>
+    {{ if .Title }}{{ .Title }} |{{ end }}
+    {{ .Site.Title }}
+  </title>
   <link rel="canonical" href="{{ .Permalink }}" />
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.min.css" />
