--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -1,27 +1,3 @@
-body {
-  background: $color-bg;
-}
-
-pre {
-  background: $black;
-  padding: 1.5em;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  margin: 2em 0;
-}
-
-code {
-  color: $color-text--accent-inline;
-  font-weight: 400;
-  padding: .1em .2em;
-}
-
-pre code {
-  color: inherit;
-  border: none;
-  background: none;
-}
-
 dl {
   @extend %module;
 }
@@ -36,4 +12,40 @@ dt {
 
 dd {
   margin-bottom: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: .5em 0;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
+h2 {
+  font-size: 1.5em;
+  color: $color-text--header--accent;
+}
+
+h3 {
+  font-size: 1.3em;
+  color: $color-text--header--accent;
+}
+
+h4 {
+  font-size: 1.2em;
+  border-bottom: 1px dotted transparentize($color-text, .5);
+}
+
+h6 {
+  text-transform: uppercase;
+}
+
+h5 {
+  text-decoration: underline;
+}
+
+h5, h6 {
+  font-size: 1.1em;
 }
