Import footnotes module

--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -4,6 +4,7 @@
 @import 'post';
 @import 'post-summary';
 @import 'posts-list';
+@import 'footnotes';
 @import 'tags';
 @import 'pagination';
 @import 'figure';
