Update header bg and color

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
-  margin-bottom: 1em;
-  padding: 1em 0;
+  color: $color-text--header;
+  background: $color-bg--header;
+  height: 75px;
 }
