--- a/src/scss/layout/all.scss
+++ b/src/scss/layout/all.scss
@@ -1,6 +1,6 @@
-@import 'grid';
 @import 'containers';
 @import 'header';
 @import 'navigation';
 @import 'intro';
+@import 'main';
 @import 'footer';
