--- a/src/scss/utils/_placeholders.scss
+++ b/src/scss/utils/_placeholders.scss
@@ -1,9 +1,14 @@
-%accent-font {
-  font-family: 'OpenSans-Bold';
+%clearfix {
+  &:after {
+    content: '';
+    display: table;
+    clear: both;
+  }
 }
 
 %flex-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 %link {
@@ -11,7 +16,6 @@
 
   &:hover {
     text-decoration: underline;
-    color: darken($color-text--link, 10%);
   }
 }
 
@@ -30,9 +34,46 @@
 }
 
 %module {
-  background: mix($black, $white, 1%);
-  border: 1px solid mix($black, $white, 8%);
-  padding: 1.5em 2em;
-  font-size: .8em;
+  padding: 1.75em;
+  border-radius: 2px;
+  border: 1px solid transparentize($color-text, .7);
+  background: transparentize($color-text, .82);
 }
 
+%striped {
+  background-image: url('/images/stripe.svg');
+}
+
+%dotted {
+  display: relative;
+
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-image: url('/images/dot.svg');
+  }
+}
+
+%col {
+  flex-grow: 1;
+  min-width: 250px;
+}
+
+%col-1-2 {
+  @extend %col;
+  flex-basis: 50%;
+}
+
+%col-1-4 {
+  @extend %col;
+  flex-basis: 25%;
+}
+ 
+%col-3-4 {
+  @extend %col;
+  flex-basis: 75%;
+}
